# supplychain_resilience_copilot

./: .env.example  .gitignore  .importlinter  CLAUDE.md  Makefile  README.md  pyproject.toml
deploy/: api.Dockerfile  docker-compose.yml  otel-collector.yaml  prometheus.yml
docs/: architecture.md  maf_port.md  supply_chain_copilot_PRD.md
docs/adr/: 0001-deterministic-tiering.md  0002-no-audit-no-autonomy.md  0003-hexagonal-orchestrator-adapter.md  0004-chronos2-over-timegen.md  0005-opik-observability-eval.md  0006-single-postgres-schema-separated.md  0007-eval-as-release-gate.md  0008-azure-openai-via-foundry.md  README.md  template.md
pipelines/: README.md
pipelines/airflow_dags/: ingest_fred_dag.py  ingest_logistics_dag.py  ingest_m5_dag.py  materialize_features_dag.py
pipelines/feast/: feature_store.yaml  features.py
tests/agents/: test_agents.py
tests/api/: test_api.py
tests/app/: test_composition.py  test_production.py
tests/contracts/: test_decision.py  test_forecasting.py  test_signals.py
tests/eval/: test_eval.py
tests/governance/: test_audit.py  test_breaker.py  test_escalation.py  test_rollback.py
tests/llm/: test_brief.py
tests/ml/: test_anomaly.py  test_classification.py  test_forecasting.py
tests/monitoring/: test_monitoring.py
tests/observability/: test_observability.py
tests/orchestration/: test_graph.py  test_maf.py  test_portable.py
tests/tools/: test_conformance.py  test_tools.py
