[project]
name = "scrc"
version = "0.1.0"
description = "Supply Chain Resilience Co-Pilot — multi-agent, ML-as-Tool decision-support system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Lead AI Architect" }]

# Phase 0–1 keeps runtime deps minimal: contracts only need Pydantic v2.
# Heavier stacks (LangGraph, Feast, MLflow, Chronos/AutoGluon, XGBoost, SHAP,
# FastAPI, OpenTelemetry) are added in their own phases via optional groups
# so the foundation stays fast to install and test.
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Layer 1 (data & feature) runtime libs — installable and unit-testable.
data = [
    "pandas>=2.2",
    "pyarrow>=16",
    "httpx>=0.27",
]
# Layer 2 (ML serving): training, calibration, attribution, registry, Chronos client.
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "shap>=0.46",
    "numpy>=1.26",
    "mlflow>=2.16",
    "httpx>=0.27",
]
# Layer 6 (interface): FastAPI surface + HITL webhook.
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
# Layer 4 (orchestration): LangGraph StateGraph + checkpointing.
orchestration = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
]
# LLM backbone: Azure OpenAI via Azure AI Foundry (ADR-0008).
llm = [
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
]
# Observability: OTEL emission -> Opik (ADR-0005), Prometheus metrics, MLflow audit.
observability = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "prometheus-client>=0.21",
    "mlflow>=2.16",
]
# Module 6 (MAF port) intentionally has no extra: `agent-framework` pulls
# pre-release sub-packages that break locked resolution. Install it manually to
# run the port:  uv pip install "agent-framework>=1.0" --prerelease=allow
#
# Heavy orchestration/feature-store runtimes — declared for the Compose images,
# not installed for local unit testing (Airflow/Feast pull large dep trees).
pipeline = [
    "feast>=0.40",
    "apache-airflow>=2.10",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "import-linter>=2.0",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Source root is packages/; the single importable namespace is `scrc`.
package-dir = { "" = "packages" }

[tool.setuptools.packages.find]
where = ["packages"]
include = ["scrc*"]

[tool.setuptools.package-data]
scrc = ["py.typed"]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["scrc"]

# ---------------------------------------------------------------------------
# mypy — static typing (strict; this is a typed-contracts codebase)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
mypy_path = "packages"
namespace_packages = true
explicit_package_bases = true
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

# Data-wrangling modules lean on pandas, whose operations frequently widen to
# Any. Keep the codebase strict everywhere else but relax Any-return warnings
# for scrc.data so feature engineering reads naturally.
[[tool.mypy.overrides]]
module = "scrc.data.*"
warn_return_any = false

# ML serving leans on sklearn/xgboost/shap, which return Any; relax Any-return
# warnings for scrc.ml only — the rest of the package stays strict.
[[tool.mypy.overrides]]
module = "scrc.ml.*"
warn_return_any = false

# Orchestration builds on LangGraph (untyped); relax Any-return warnings there.
[[tool.mypy.overrides]]
module = "scrc.orchestration.*"
warn_return_any = false

# Observability wraps untyped OTEL/Prometheus/MLflow clients.
[[tool.mypy.overrides]]
module = "scrc.observability.*"
warn_return_any = false

# Composition root trains demo models with numpy/pandas/sklearn.
[[tool.mypy.overrides]]
module = "scrc.app.*"
warn_return_any = false

# Monitoring uses sklearn/optuna (untyped) for HPO and scoring.
[[tool.mypy.overrides]]
module = "scrc.monitoring.*"
warn_return_any = false

# Third-party ML/serving libs without bundled type stubs.
[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "xgboost.*",
    "shap.*",
    "mlflow.*",
    "langgraph.*",
    "langchain_core.*",
    "langchain_openai.*",
    "opentelemetry.*",
    "prometheus_client.*",
    "agent_framework.*",
    "opik.*",
    "optuna.*",
    "joblib.*",
    "feast.*",
]
ignore_missing_imports = true

# The MAF port subclasses agent_framework's Executor and uses its decorators;
# both resolve to Any (SDK not installed locally), so relax those strict checks
# for this teaching-port module only.
[[tool.mypy.overrides]]
module = "scrc.orchestration.maf.*"
disallow_subclassing_any = false
disallow_untyped_decorators = false

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["packages"]
